# xlreg_cpp

./: .gitignore  CHANGES  CMakeCache.txt  Makefile  Makefile.am  README.md  TODO  bkp2U  cmake_install.cmake  configure  configure.ac  countem  in.the.beginning  index.html  installit  styleit  test.all  wscript
.dvcz/: builds  lastBuildList  projCfg  projCfg.local  version
doc/: index.md
ghpDoc/: index.md
include/: xlreg_cpp.h
src/: Makefile  Makefile.am  main.cpp  version.cpp  xlReg.h  xlRegCppClient  xlreg_client.cpp
test/: Makefile
